Try to avoid pre-compilation of .py files on arm64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -159,6 +159,7 @@ outputs:
     build:
       skip_compile_pyc:
         - "share/bash-completion/completions/*.py"
+        - "*"  # [arm64]
     requirements:
       build:
         - {{ compiler('c') }}
